cleanup htmls and add english language

--- a/aboutus.html
+++ b/aboutus.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -43,7 +43,8 @@
 
         <p>Based in Copenhagen, Denmark, MoldoVin has been providing the Danish wine market with high quality Moldovan wine since 2017.
 
-            <br><br>It all started after a trip to Moldova. We were so fascinated by the quality of their homemade wines and all the traditions around it, that we felt we needed to share that well kept secret with other wine enthusiasts in Scandinavia.</p>
+            <br><br>It all started after a trip to Moldova. We were so fascinated by the quality of their homemade wines and all the traditions around it, that we felt we needed to share that well kept secret with other wine enthusiasts in Scandinavia.
+        </p>
     </div>
 </section>
 
@@ -74,7 +75,7 @@
             <div class="member_text">
                 <p class="member_title">Denise Ene</p>
                 <p class="member_text">Marketing Manager
-</p>
+                </p>
             </div>
 
         </div>
@@ -83,7 +84,7 @@
             <div><img class="member" src="images/photos/aboutus/henry.png"></div>
             <div class="member_text">
                 <p class="member_title">Henry Miller
-</p>
+                </p>
                 <p class="member_text">General Manager</p>
             </div>
 
@@ -102,44 +103,45 @@
 
 </section>
 
-    <section class="our_mission">
+<section class="our_mission">
     <div class="our_mission_text">
         <h3>WHY WE ARE HERE</h3>
         <h2 style="color:white">Our Mission</h2>
         <p style="color:white">Our mission is to bring Moldovan wine and culture to Scandinavia and provide a platform for our community to experience exciting wines.
-<br><br>
-We want to push your boundaries in new and interesting ways.</p>
+            <br><br>
+            We want to push your boundaries in new and interesting ways.
+        </p>
     </div>
 </section>
 
-     <section class="center">
-            <h2>Contact Us</h2>
+<section class="center">
+    <h2>Contact Us</h2>
 
-            <div class="wrapper_contactus">
-                <div class="name">
-                    <p>Name*</p>
-                    <div class="name_box"></div>
-                </div>
-                <div class="email">
-                    <p>E-mail*</p>
-                    <div class="email_box"></div>
-                </div>
-                <div class="company">
-                    <p>Company*</p>
-                    <div class="company_box"></div>
-                </div>
-                <div class="phone">
-                    <p>Phone number</p>
-                    <div class="phone_box"></div>
-                </div>
-                <div class="message">
-                    <p>Message</p>
-                    <div class="message_box"></div>
-                </div>
-                <div class="button_send_container"><button class="button_send">SEND</button></div>
-            </div>
+    <div class="wrapper_contactus">
+        <div class="name">
+            <p>Name*</p>
+            <div class="name_box"></div>
+        </div>
+        <div class="email">
+            <p>E-mail*</p>
+            <div class="email_box"></div>
+        </div>
+        <div class="company">
+            <p>Company*</p>
+            <div class="company_box"></div>
+        </div>
+        <div class="phone">
+            <p>Phone number</p>
+            <div class="phone_box"></div>
+        </div>
+        <div class="message">
+            <p>Message</p>
+            <div class="message_box"></div>
+        </div>
+        <div class="button_send_container"><button class="button_send">SEND</button></div>
+    </div>
 
-        </section>
+</section>
 
 
 
@@ -148,7 +150,7 @@ We want to push your boundaries in new and interesting ways.</p>
 <body>
 
 
-     <footer>
+    <footer>
 
         <div class="footergrid">
             <div class="footer_1">
