--- a/privateevents.html
+++ b/privateevents.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,37 +9,31 @@
 
 <body>
     <header>
-    <nav>
-        <div> <a href="index.html"><img class="logo" src="images/icons/homepage/moldovin_logo.svg"></a></div>
-        <ul>
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="aboutus.html">ABOUT US</a></li>
-            <li><a href="wineshop.html">WINE SHOP</a></li>
-            <li><a href="events.html">EVENTS</a></li>
-            <div> <a><img class="cart" src="images/icons/homepage/Icon%20feather-shopping-cart.svg"></a></div>
-        </ul>
-
-    </nav>
+        <nav>
+            <div> <a href="index.html"><img class="logo" src="images/icons/homepage/moldovin_logo.svg"></a></div>
+            <ul>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="aboutus.html">ABOUT US</a></li>
+                <li><a href="wineshop.html">WINE SHOP</a></li>
+                <li><a href="events.html">EVENTS</a></li>
+                <div> <a><img class="cart" src="images/icons/homepage/Icon%20feather-shopping-cart.svg"></a></div>
+            </ul>
+        </nav>
         <div class="banner_privateevents">
             <h1>wine tastings for companies</h1>
         </div>
-
     </header>
 
     <main>
-
         <section class="intro private">
             <h3>wine tastings for companies</h3>
             <h2>Unique team building</h2>
             <p>Wine Down and Discover Moldovan Wine Culture at the workplace!
                 Wine tasting events are a great opportunity for team-building, improving company culture, and strengthening your client network.</p>
-
         </section>
-
 
         <section class="event">
             <div class="wrapper2 wrapper2pictureright">
-
                 <div class="textbox">
                     <h3>Our offer</h3>
                     <h5>What will you get?</h5>
@@ -62,8 +56,6 @@
                         <li>
                             <p> Have the opportunity for team-building activities</p>
                         </li>
-
-
                     </ul>
                     <button>
                         <p>Book event</p>
@@ -76,7 +68,6 @@
         <section class="prices">
             <h3>prices</h3>
             <h5>Our options</h5>
-
             <p>Here you can check the prices of booking a wine tasting with us, according to the number of employees attending the event.</p>
 
             <div class="wrapper gap1">
@@ -112,15 +103,12 @@
                     <h5>More than just tasting</h5>
                     <p>
                         Goodbye to the old traditional, boring conservative sit-down tastings.<br>
-
                         Hello to a new fun formate, perfect for socialising, networking, and team-building.
-
                     </p>
                     <button>
                         <p>Book event</p>
                     </button>
                 </div>
-
             </div>
         </section>
 
@@ -154,55 +142,47 @@
             </div>
 
         </section>
-    <footer>
+        <footer>
 
-        <div class="footergrid">
-            <div class="footer_1">
-                <img class="logowhite" src="images/icons/homepage/moldovin_white.svg" alt="Moldovin logo">
-                <p>Phone: +45 40116274</p>
-                <p>Mail: info@moldovin.dk</p>
-                <p>CVR: 38570609</p>
-            </div>
+            <div class="footergrid">
+                <div class="footer_1">
+                    <img class="logowhite" src="images/icons/homepage/moldovin_white.svg" alt="Moldovin logo">
+                    <p>Phone: +45 40116274</p>
+                    <p>Mail: info@moldovin.dk</p>
+                    <p>CVR: 38570609</p>
+                </div>
 
-            <div class="footer_2">
-                <div class="f2_information">
-                    <p class="ftitle_style">Information</p>
-                    <p>About us</p>
-                    <p>Wineries</p>
-                    <p>Shipping</p>
-                </div> <br>
-                <div class="f2_Useful Links">
-                    <p class="ftitle_style">Useful Links</p>
-                    <p>Contact us</p>
-                    <p>Leave a review</p>
-                    <p>Terms and Conditions</p>
+                <div class="footer_2">
+                    <div class="f2_information">
+                        <p class="ftitle_style">Information</p>
+                        <p>About us</p>
+                        <p>Wineries</p>
+                        <p>Shipping</p>
+                    </div> <br>
+                    <div class="f2_Useful Links">
+                        <p class="ftitle_style">Useful Links</p>
+                        <p>Contact us</p>
+                        <p>Leave a review</p>
+                        <p>Terms and Conditions</p>
+                    </div>
+                </div>
+
+                <div class="footer_3">
+                    <div class="stay_connected">
+                        <p class="ftitle_style">Stay connected</p>
+                        <p>Subscribe to our newsletter. Don’t worry we won’t spam you. You’ll only get the most important information and special offers!</p>
+                        <button>SUBSCRIBE</button>
+                    </div> <br>
+                    <div class="our_partners">
+                        <p class="ftitle_style">Our Partners</p>
+                        <img class="partners" src="images/icons/homepage/partners_logo.svg">
+                    </div>
                 </div>
             </div>
 
-            <div class="footer_3">
-                <div class="stay_connected">
-                    <p class="ftitle_style">Stay connected</p>
-                    <p>Subscribe to our newsletter. Don’t worry we won’t spam you. You’ll only get the most important information and special offers!</p>
-                    <button>SUBSCRIBE</button>
-                </div> <br>
-                <div class="our_partners">
-                    <p class="ftitle_style">Our Partners</p>
-                    <img class="partners" src="images/icons/homepage/partners_logo.svg">
-                </div>
-
-
-            </div>
-
-        </div>
-
-        <p class="copyright">Copyright © Moldovin</p>
-    </footer>
+            <p class="copyright">Copyright © Moldovin</p>
+        </footer>
     </main>
-
-
-
-
-
 
     <script src=""></script>
 </body></html>
