--- a/wineshopcategory.html
+++ b/wineshopcategory.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -21,7 +21,6 @@
             </ul>
         </nav>
     </header>
-
 
 
     <div class="bannerwineshop">
@@ -86,30 +85,3 @@
 
     <script src="script.js"></script>
 </body></html>
-
-
-
-
-
-
-
-
-
-
-<!-- <p class="productlist_price"><span class="price">150</span> DKK</p> -->
-
-<!--
-    <template>
-        <article class="life-change">
-            <div class="lifechangecard">
-                <span class="lifechangecardhover">
-                    <h2 class="title2">Becoming unemployed</h2>
-                    <div class="shortdescription">short description</div>
-                    <a href="singlechange.html?change_id=" class="learnMore">Learn more</a>
-                </span>
-                <img class="product_image" src="img/unemployed.png" alt="Illustration of the life change" />
-                <h2 class="title">Becoming unemployed</h2>
-            </div>
-        </article>
-    </template>
-    -->
