--- a/events.html
+++ b/events.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -10,31 +10,28 @@
 
 <body>
     <header>
-    <nav>
-        <div> <a href="index.html"><img class="logo" src="images/icons/homepage/moldovin_logo.svg"></a></div>
-        <ul>
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="aboutus.html">ABOUT US</a></li>
-            <li><a href="wineshop.html">WINE SHOP</a></li>
-            <li><a href="events.html">EVENTS</a></li>
-            <div> <a><img class="cart" src="images/icons/homepage/Icon%20feather-shopping-cart.svg"></a></div>
-        </ul>
+        <nav>
+            <div> <a href="index.html"><img class="logo" src="images/icons/homepage/moldovin_logo.svg"></a></div>
+            <ul>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="aboutus.html">ABOUT US</a></li>
+                <li><a href="wineshop.html">WINE SHOP</a></li>
+                <li><a href="events.html">EVENTS</a></li>
+                <div> <a><img class="cart" src="images/icons/homepage/Icon%20feather-shopping-cart.svg"></a></div>
+            </ul>
 
-    </nav>
-            <div class="banner_events">
+        </nav>
+        <div class="banner_events">
             <h1>Events</h1>
         </div>
     </header>
     <main>
-
 
         <section class="intro">
             <h3>Events</h3>
             <h2>Winetastic Experience</h2>
             <p> We host two kind of wine tasting events to get you closer to the fantastic Moldovan wine culture.
                 But what both have in common is the informal setting of them, nothing to do with the traditional sit-down tastings. Our events invite to a more social interaction, not only between our wine experts and the attendees but also between the attendees themselves.</p>
-
-
             <div class="eventimages">
                 <div class="publiceventsimg"><span class="buttonstyle"><button>
                             <p>Public wine<br> tastings</p>
@@ -43,10 +40,7 @@
                             <p>Wine tastings <br>for companies</p>
                         </button></span></div>
             </div>
-
         </section>
-
-
 
         <section class="offers">
             <h3>What we offer</h3>
@@ -126,57 +120,47 @@
                     </div>
                 </div>
             </div>
-
-
-
-
-
-
-
         </section>
-    <footer>
 
-        <div class="footergrid">
-            <div class="footer_1">
-                <img class="logowhite" src="images/icons/homepage/moldovin_white.svg" alt="Moldovin logo">
-                <p>Phone: +45 40116274</p>
-                <p>Mail: info@moldovin.dk</p>
-                <p>CVR: 38570609</p>
-            </div>
+        <footer>
+            <div class="footergrid">
+                <div class="footer_1">
+                    <img class="logowhite" src="images/icons/homepage/moldovin_white.svg" alt="Moldovin logo">
+                    <p>Phone: +45 40116274</p>
+                    <p>Mail: info@moldovin.dk</p>
+                    <p>CVR: 38570609</p>
+                </div>
 
-            <div class="footer_2">
-                <div class="f2_information">
-                    <p class="ftitle_style">Information</p>
-                    <p>About us</p>
-                    <p>Wineries</p>
-                    <p>Shipping</p>
-                </div> <br>
-                <div class="f2_Useful Links">
-                    <p class="ftitle_style">Useful Links</p>
-                    <p>Contact us</p>
-                    <p>Leave a review</p>
-                    <p>Terms and Conditions</p>
+                <div class="footer_2">
+                    <div class="f2_information">
+                        <p class="ftitle_style">Information</p>
+                        <p>About us</p>
+                        <p>Wineries</p>
+                        <p>Shipping</p>
+                    </div> <br>
+                    <div class="f2_Useful Links">
+                        <p class="ftitle_style">Useful Links</p>
+                        <p>Contact us</p>
+                        <p>Leave a review</p>
+                        <p>Terms and Conditions</p>
+                    </div>
+                </div>
+
+                <div class="footer_3">
+                    <div class="stay_connected">
+                        <p class="ftitle_style">Stay connected</p>
+                        <p>Subscribe to our newsletter. Don’t worry we won’t spam you. You’ll only get the most important information and special offers!</p>
+                        <button>SUBSCRIBE</button>
+                    </div> <br>
+                    <div class="our_partners">
+                        <p class="ftitle_style">Our Partners</p>
+                        <img class="partners" src="images/icons/homepage/partners_logo.svg">
+                    </div>
                 </div>
             </div>
 
-            <div class="footer_3">
-                <div class="stay_connected">
-                    <p class="ftitle_style">Stay connected</p>
-                    <p>Subscribe to our newsletter. Don’t worry we won’t spam you. You’ll only get the most important information and special offers!</p>
-                    <button>SUBSCRIBE</button>
-                </div> <br>
-                <div class="our_partners">
-                    <p class="ftitle_style">Our Partners</p>
-                    <img class="partners" src="images/icons/homepage/partners_logo.svg">
-                </div>
-
-
-            </div>
-
-        </div>
-
-        <p class="copyright">Copyright © Moldovin</p>
-    </footer>
+            <p class="copyright">Copyright © Moldovin</p>
+        </footer>
     </main>
     <script src=""></script>
 </body></html>
