--- a/wineshop.html
+++ b/wineshop.html
@@ -1,141 +1,83 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title></title>
-  <link rel="stylesheet" href="css/wineshop.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title></title>
+    <link rel="stylesheet" href="css/wineshop.css">
 </head>
 
 <body>
 
-  <header>
-    <nav>
-      <div> <a href="index.html"><img class="logo" src="images/icons/homepage/moldovin_logo.svg"></a></div>
-      <ul>
-        <li><a href="index.html">HOME</a></li>
-        <li><a href="aboutus.html">ABOUT US</a></li>
-        <li><a href="wineshop.html">WINE SHOP</a></li>
-        <li><a href="events.html">EVENTS</a></li>
-      </ul>
-    </nav>
-  </header>
-
-
-
-  <div class="bannerwineshop">
-    <h1>Wine shop</h1>
-  </div>
-
-
-  <section class="intro">
-    <h3>Wine shop</h3>
-    <h2>Come for the taste, stay for the lifestyle.
-      Discover Moldovan wines.</h2>
-  </section>
-
-  <!-- <template id="filterTemplate">
-        <section class="filternav">
-            <ul class="filterul">
-                <li><a href="" class=""></a></li>
+    <header>
+        <nav>
+            <div> <a href="index.html"><img class="logo" src="images/icons/homepage/moldovin_logo.svg"></a></div>
+            <ul>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="aboutus.html">ABOUT US</a></li>
+                <li><a href="wineshop.html">WINE SHOP</a></li>
+                <li><a href="events.html">EVENTS</a></li>
             </ul>
-        </section>
-</template>-->
+        </nav>
+    </header>
 
+    <div class="bannerwineshop">
+        <h1>Wine shop</h1>
+    </div>
 
-  <!--
+    <section class="intro">
+        <h3>Wine shop</h3>
+        <h2>Come for the taste, stay for the lifestyle.
+            Discover Moldovan wines.</h2>
+    </section>
+
+    <ul class="filterul"></ul>
     <template id="categories_template">
+        <li class="filterli">
+            <div class="whitefilter_dot"></div>
+            <p class="whitefilter_title">WHITE</p>
+        </li>
+    </template>
+
+    <section class="filternav">
         <ul class="filterwrapper">
+            <li><a href="" class="allwines_filter">ALL WINES</a></li>
             <li>
                 <a href="" class="white_filter">
                     <div class="whitefilter_dot"></div>
                     <p class="whitefilter_title">WHITE</p>
                 </a>
             </li>
+            <li>
+                <a href="" class="red_filter">
+                    <div class="redfilter_dot"></div>
+                    <p class="redfilter_title">RED</p>
+                </a>
+            </li>
+            <li>
+                <a href="" class="rose_filter">
+                    <div class="rosefilter_dot"></div>
+                    <p class="rosefilter_title">ROSE</p>
+                </a>
+            </li>
         </ul>
-    </template>
--->
-  <ul class="filterul">
-  </ul>
-  <template id="categories_template">
+    </section>
 
-    <li class="filterli">
-      <div class="whitefilter_dot"></div>
-      <p class="whitefilter_title">WHITE</p>
-    </li>
-
-  </template>
-
-
-
-  <section class="filternav">
-    <ul class="filterwrapper">
-      <li><a href="" class="allwines_filter">ALL WINES</a></li>
-      <li>
-        <a href="" class="white_filter">
-          <div class="whitefilter_dot"></div>
-          <p class="whitefilter_title">WHITE</p>
-        </a>
-      </li>
-      <li>
-        <a href="" class="red_filter">
-          <div class="redfilter_dot"></div>
-          <p class="redfilter_title">RED</p>
-        </a>
-      </li>
-      <li>
-        <a href="" class="rose_filter">
-          <div class="rosefilter_dot"></div>
-          <p class="rosefilter_title">ROSE</p>
-        </a>
-      </li>
-    </ul>
-  </section>
-
-  <main></main>
-  <template id="product_template">
-    <article class="productlist">
-      <a href="product.html?product_id=" class="subpage_link">
-        <img class="product_image" src="images/photos/wineshop/femmefatale_wine.png" alt="" />
-      </a>
-      <div class="product_text">
-        <h4 class="product_title">Femme Fatale</h4>
-        <h5 class="product_winery">Carpe Diem</h5>
-        <div class="product_shortdescription">Finely balanced wine with a lot of character - light, fresh, but still rich of fruity flavour</div>
-        <p class="product_price">150</p>
-      </div>
-    </article>
-  </template>
-
-  <script src="script.js"></script>
-</body>
-
-</html>
-
-
-
-
-
-
-
-
-
-
-<!-- <p class="productlist_price"><span class="price">150</span> DKK</p> -->
-
-<!--
-    <template>
-        <article class="life-change">
-            <div class="lifechangecard">
-                <span class="lifechangecardhover">
-                    <h2 class="title2">Becoming unemployed</h2>
-                    <div class="shortdescription">short description</div>
-                    <a href="singlechange.html?change_id=" class="learnMore">Learn more</a>
-                </span>
-                <img class="product_image" src="img/unemployed.png" alt="Illustration of the life change" />
-                <h2 class="title">Becoming unemployed</h2>
+    <main></main>
+    <template id="product_template">
+        <article class="productlist">
+            <a href="product.html?product_id=" class="subpage_link">
+                <img class="product_image" src="images/photos/wineshop/femmefatale_wine.png" alt="" />
+            </a>
+            <div class="product_text">
+                <h4 class="product_title">Femme Fatale</h4>
+                <h5 class="product_winery">Carpe Diem</h5>
+                <div class="product_shortdescription">Finely balanced wine with a lot of character - light, fresh, but still rich of fruity flavour</div>
+                <p class="product_price">150</p>
             </div>
         </article>
     </template>
-    -->
+
+    <script src="script.js"></script>
+</body></html>
