add hover and cursor pointer

--- a/wineshop.html
+++ b/wineshop.html
@@ -69,15 +69,17 @@
         <article class="productlist">
             <a href="product.html?product_id=" class="subpage_link">
                 <img class="product_image" src="images/photos/wineshop/femmefatale_wine.png" alt="" />
+                <div class="product_text">
+                    <h4 class="product_title">Femme Fatale</h4>
+                    <h5 class="product_winery">Carpe Diem</h5>
+                    <div class="product_shortdescription">Finely balanced wine with a lot of character - light, fresh, but still rich of fruity flavour</div>
+                    <p class="product_price">150</p>
+                </div>
             </a>
-            <div class="product_text">
-                <h4 class="product_title">Femme Fatale</h4>
-                <h5 class="product_winery">Carpe Diem</h5>
-                <div class="product_shortdescription">Finely balanced wine with a lot of character - light, fresh, but still rich of fruity flavour</div>
-                <p class="product_price">150</p>
-            </div>
         </article>
     </template>
 
     <script src="script.js"></script>
-</body></html>
+</body>
+
+</html>
