edit buttons and add links to events

--- a/events.html
+++ b/events.html
@@ -34,10 +34,14 @@
                 But what both have in common is the informal setting of them, nothing to do with the traditional sit-down tastings. Our events invite to a more social interaction, not only between our wine experts and the attendees but also between the attendees themselves.</p>
             <div class="eventimages">
                 <div class="publiceventsimg"><span class="buttonstyle"><button>
-                            <p>Public wine<br> tastings</p>
+                            <a href="publicevents.html" class="eventslink">
+                                <p>Public wine<br> tastings</p>
+                            </a>
                         </button></span></div>
                 <div class="privateeventsimg"><span class="buttonstyle"><button>
-                            <p>Wine tastings <br>for companies</p>
+                            <a href="privateevents.html" class="eventslink">
+                                <p>Wine tastings <br>for companies</p>
+                            </a>
                         </button></span></div>
             </div>
         </section>
