add cart, edit js comments, add cursor pointers

--- a/wineshop.html
+++ b/wineshop.html
@@ -18,6 +18,7 @@
                 <li><a href="aboutus.html">ABOUT US</a></li>
                 <li><a href="wineshop.html">WINE SHOP</a></li>
                 <li><a href="events.html">EVENTS</a></li>
+                <div> <a><img class="cart" src="images/icons/homepage/Icon%20feather-shopping-cart.svg"></a></div>
             </ul>
         </nav>
     </header>
@@ -80,6 +81,4 @@
     </template>
 
     <script src="script.js"></script>
-</body>
-
-</html>
+</body></html>
