--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
 
 <div class="sticky_header" id="mySticky_Header">
     <p id="free_shipping">Free shipping</p>
-    <p id="sticky_offer">Special Christmas offer: 2 bottles of Lupi from Gitana - 20% off. Check it out!<p>
+    <p id="sticky_offer">Special Christmas offer: 2 bottles of Lupi from Gitana - 20% off. Check it out!
+    <p>
 
-            <div class="trustpilot_div">
-                <p> Excellent </p>
-                <img class="trustpilot_stars" src="images/photos/homepage/TP_stars.svg">
-                <img class="trustpilot" src="images/photos/homepage/trustpilot_logo.svg">
-            </div>
+    <div class="trustpilot_div">
+        <p> Excellent </p>
+        <img class="trustpilot_stars" src="images/photos/homepage/TP_stars.svg">
+        <img class="trustpilot" src="images/photos/homepage/trustpilot_logo.svg">
+    </div>
 </div>
-<header>
 
+<header>
     <nav>
         <div> <a href="index.html"><img class="logo" src="images/icons/homepage/moldovin_logo.svg"></a></div>
         <ul>
@@ -29,14 +30,12 @@
             <li><a href="events.html">EVENTS</a></li>
             <div> <a><img class="cart" src="images/icons/homepage/Icon%20feather-shopping-cart.svg"></a></div>
         </ul>
-
     </nav>
     <section class="header_video">
         <video autoplay muted loop id="Moldovin_video" width="100%" height="auto" controls>
             <source src="video/IMG_4824.mp4" type="video/mp4">
         </video>
     </section>
-
     <section class="banner_homepage">
     </section>
 </header>
@@ -98,7 +97,7 @@
 
             <div class="box">
 
-                <div >
+                <div>
                     <img class="icon" src="images/icons/homepage/soil.png">
                 </div>
                 <div class="icon_text">
@@ -109,7 +108,7 @@
 
             <div class="box">
 
-                <div >
+                <div>
                     <img class="icon" src="images/icons/homepage/grapes.png">
                 </div>
                 <div class="icon_text">
@@ -120,7 +119,7 @@
 
             <div class="box">
 
-                <div >
+                <div>
                     <img class="icon" src="images/icons/homepage/taste.png">
                 </div>
                 <div class="icon_text">
@@ -131,7 +130,7 @@
 
             <div class="box">
 
-                <div >
+                <div>
                     <img class="icon" src="images/icons/homepage/winemaking.png">
                 </div>
                 <div class="icon_text">
@@ -150,7 +149,8 @@
             <h2> We're the Connection</h2>
             <p>Based in Copenhagen, Denmark, MoldoVin has been providing the Danish wine market with high quality Moldovan wine since 2017.
 
-                <br> <br>Our mission is to promote Moldovan culture and provide a platform for our community to experience exciting wines. </p>
+                <br> <br>Our mission is to promote Moldovan culture and provide a platform for our community to experience exciting wines.
+            </p>
             <button>CLICK TO KNOW US</button>
         </div>
     </section>
@@ -175,20 +175,21 @@
             <h2>Winetastic Experience</h2>
             <p>We host two kind of wine tasting events to get you closer to the fantastic Moldovan wine culture.
                 But what both have in common is the informal setting of them, nothing to do with the traditional sit-down tastings.
-                <br><br> Our events invite to a more social interaction, not only between our wine experts and the attendees but also between the attendees themselves.</p>
+                <br><br> Our events invite to a more social interaction, not only between our wine experts and the attendees but also between the attendees themselves.
+            </p>
         </div>
         <div class="eventimages">
-                <div class="publiceventsimg"><span class="buttonstyle"><button>
-                            <a href="publicevents.html" class="eventslink">
-                                <p>Public wine<br> tastings</p>
-                            </a>
-                        </button></span></div>
-                <div class="privateeventsimg"><span class="buttonstyle"><button>
-                            <a href="privateevents.html" class="eventslink">
-                                <p>Wine tastings <br>for companies</p>
-                            </a>
-                        </button></span></div>
-            </div>
+            <div class="publiceventsimg"><span class="buttonstyle"><button>
+                        <a href="publicevents.html" class="eventslink">
+                            <p>Public wine<br> tastings</p>
+                        </a>
+                    </button></span></div>
+            <div class="privateeventsimg"><span class="buttonstyle"><button>
+                        <a href="privateevents.html" class="eventslink">
+                            <p>Wine tastings <br>for companies</p>
+                        </a>
+                    </button></span></div>
+        </div>
     </section>
 
 
