--- a/product.html
+++ b/product.html
@@ -9,7 +9,6 @@
 </head>
 
 <body>
-
     <header>
         <nav>
             <div> <a href="index.html"><img class="logo" src="images/icons/homepage/moldovin_logo.svg"></a></div>
@@ -18,6 +17,7 @@
                 <li><a href="aboutus.html">ABOUT US</a></li>
                 <li><a href="wineshop.html">WINE SHOP</a></li>
                 <li><a href="events.html">EVENTS</a></li>
+                <div> <a><img class="cart" src="images/icons/homepage/Icon%20feather-shopping-cart.svg"></a></div>
             </ul>
         </nav>
     </header>
