optimized for mobile, nav and footer is fixed

--- a/events.html
+++ b/events.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title></title>
     <link rel="stylesheet" href="css/events.css">
 </head>
@@ -32,7 +33,7 @@
             <h2>Winetastic Experience</h2>
             <p> We host two kind of wine tasting events to get you closer to the fantastic Moldovan wine culture.
                 But what both have in common is the informal setting of them, nothing to do with the traditional sit-down tastings. Our events invite to a more social interaction, not only between our wine experts and the attendees but also between the attendees themselves.</p>
-            <div class="eventimages">
+         <div class="eventimages">
                 <div class="publiceventsimg"><span class="buttonstyle"><button>
                             <a href="publicevents.html" class="eventslink">
                                 <p>Public wine<br> tastings</p>
@@ -82,7 +83,7 @@
             <h3>Testimonials</h3>
             <h2>What people say about us</h2>
 
-            <div class="wrapper">
+            <div class="wrapper wrapper_testimonials">
                 <div class="box left">
                     <div class="quotemark_grey"></div>
                     <div class="test_card_white">
@@ -90,7 +91,7 @@
                     </div>
                     <div class="test_person">
                         <div class="test_image">
-                            <img src="images/photos/events/alexandru.png">
+                            <img class="test_image_actual" src="images/photos/events/alexandru.png">
 
                         </div>
                         <p class="test_name"><strong>Alexandru Gutu</strong></p>
@@ -104,7 +105,7 @@
                     </div>
                     <div class="test_person">
                         <div class="test_image">
-                            <img src="images/photos/events/katja.png">
+                            <img class="test_image_actual" src="images/photos/events/katja.png">
                         </div>
                         <p class="test_name"><strong>Katja Petersen</strong></p>
                     </div>
@@ -117,7 +118,7 @@
                     </div>
                     <div class="test_person">
                         <div class="test_image">
-                            <img src="images/photos/events/trine.png">
+                            <img class="test_image_actual" src="images/photos/events/trine.png">
 
                         </div>
                         <p class="test_name"><strong>Trine Bengtsson</strong></p>
@@ -138,7 +139,7 @@
                 <div class="footer_2">
                     <div class="f2_information">
                         <p class="ftitle_style">Information</p>
-                        <p>About us</p>
+                         <p><a class="footerlink" href="aboutus.html">About us</a></p>
                         <p>Wineries</p>
                         <p>Shipping</p>
                     </div> <br>
@@ -150,17 +151,28 @@
                     </div>
                 </div>
 
-                <div class="footer_3">
-                    <div class="stay_connected">
-                        <p class="ftitle_style">Stay connected</p>
-                        <p>Subscribe to our newsletter. Don’t worry we won’t spam you. You’ll only get the most important information and special offers!</p>
-                        <button>SUBSCRIBE</button>
-                    </div> <br>
-                    <div class="our_partners">
-                        <p class="ftitle_style">Our Partners</p>
-                        <img class="partners" src="images/icons/homepage/partners_logo.svg">
+                         <div class="footer_3">
+                <div class="stay_connected">
+                    <p class="ftitle_style">Stay connected</p>
+                    <p>Subscribe to our newsletter. Don’t worry we won’t spam you. You’ll only get the most important information and special offers!</p>
+                    <button>SUBSCRIBE</button>
+                </div> <br>
+                <div class="our_partners">
+                    <p class="ftitle_style">Our Partners</p>
+                    <div class="partners">
+                        <img class="partnerlogo" src="images/photos/footer/5f4e9fa3a3a86039291d36c6_kihoskh.png">
+                        <img class="partnerlogo" src="images/photos/footer/barpoldo.png">
+                        <img class="partnerlogo" src="images/photos/footer/Carpe%20Diem.png">
+                        <img class="partnerlogo" src="images/photos/footer/castelmimi.png">
+                        <img class="partnerlogo" src="images/photos/footer/fautor.png">
+                        <img class="partnerlogo" src="images/photos/footer/gitana-winery-logo-6940F08529-seeklogo.com.png">
+                        <img class="partnerlogo" src="images/photos/footer/notyourusualwinebar.png">
+                        <img class="partnerlogo" src="images/photos/footer/vinveto.png">
                     </div>
                 </div>
+
+
+            </div>
             </div>
 
             <p class="copyright">Copyright © Moldovin</p>
