--- a/publicevents.html
+++ b/publicevents.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title></title>
     <link rel="stylesheet" href="css/events.css">
 </head>
@@ -129,7 +130,7 @@
                 <div class="footer_2">
                     <div class="f2_information">
                         <p class="ftitle_style">Information</p>
-                        <p>About us</p>
+                         <p><a class="footerlink" href="aboutus.html">About us</a></p>
                         <p>Wineries</p>
                         <p>Shipping</p>
                     </div> <br>
@@ -141,17 +142,28 @@
                     </div>
                 </div>
 
-                <div class="footer_3">
-                    <div class="stay_connected">
-                        <p class="ftitle_style">Stay connected</p>
-                        <p>Subscribe to our newsletter. Don’t worry we won’t spam you. You’ll only get the most important information and special offers!</p>
-                        <button>SUBSCRIBE</button>
-                    </div> <br>
-                    <div class="our_partners">
-                        <p class="ftitle_style">Our Partners</p>
-                        <img class="partners" src="images/icons/homepage/partners_logo.svg">
+                         <div class="footer_3">
+                <div class="stay_connected">
+                    <p class="ftitle_style">Stay connected</p>
+                    <p>Subscribe to our newsletter. Don’t worry we won’t spam you. You’ll only get the most important information and special offers!</p>
+                    <button>SUBSCRIBE</button>
+                </div> <br>
+                <div class="our_partners">
+                    <p class="ftitle_style">Our Partners</p>
+                    <div class="partners">
+                        <img class="partnerlogo" src="images/photos/footer/5f4e9fa3a3a86039291d36c6_kihoskh.png">
+                        <img class="partnerlogo" src="images/photos/footer/barpoldo.png">
+                        <img class="partnerlogo" src="images/photos/footer/Carpe%20Diem.png">
+                        <img class="partnerlogo" src="images/photos/footer/castelmimi.png">
+                        <img class="partnerlogo" src="images/photos/footer/fautor.png">
+                        <img class="partnerlogo" src="images/photos/footer/gitana-winery-logo-6940F08529-seeklogo.com.png">
+                        <img class="partnerlogo" src="images/photos/footer/notyourusualwinebar.png">
+                        <img class="partnerlogo" src="images/photos/footer/vinveto.png">
                     </div>
                 </div>
+
+
+            </div>
             </div>
 
             <p class="copyright">Copyright © Moldovin</p>
