--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
             <div class="box">
 
-                <div >
+                <div>
                     <img class="icon" src="images/icons/homepage/soil.png">
                 </div>
                 <div class="icon_text">
@@ -110,7 +110,7 @@
 
             <div class="box">
 
-                <div >
+                <div>
                     <img class="icon" src="images/icons/homepage/grapes.png">
                 </div>
                 <div class="icon_text">
@@ -121,7 +121,7 @@
 
             <div class="box">
 
-                <div >
+                <div>
                     <img class="icon" src="images/icons/homepage/taste.png">
                 </div>
                 <div class="icon_text">
@@ -132,7 +132,7 @@
 
             <div class="box">
 
-                <div >
+                <div>
                     <img class="icon" src="images/icons/homepage/winemaking.png">
                 </div>
                 <div class="icon_text">
@@ -179,17 +179,17 @@
                 <br><br> Our events invite to a more social interaction, not only between our wine experts and the attendees but also between the attendees themselves.</p>
         </div>
         <div class="eventimages">
-                <div class="publiceventsimg"><span class="buttonstyle"><button>
-                            <a href="publicevents.html" class="eventslink">
-                                <p>Public wine<br> tastings</p>
-                            </a>
-                        </button></span></div>
-                <div class="privateeventsimg"><span class="buttonstyle"><button>
-                            <a href="privateevents.html" class="eventslink">
-                                <p>Wine tastings <br>for companies</p>
-                            </a>
-                        </button></span></div>
-            </div>
+            <div href="publicevents.html" class="publiceventsimg"><span class="buttonstyle"><button>
+                        <a href="publicevents.html" class="eventslink">
+                            <p>Public wine<br> tastings</p>
+                        </a>
+                    </button></span></div>
+            <div class="privateeventsimg"><span class="buttonstyle"><button>
+                        <a href="privateevents.html" class="eventslink">
+                            <p>Wine tastings <br>for companies</p>
+                        </a>
+                    </button></span></div>
+        </div>
     </section>
 
 
@@ -206,7 +206,7 @@
             <div class="footer_2">
                 <div class="f2_information">
                     <p class="ftitle_style">Information</p>
-                    <p>About us</p>
+                    <p><a class="footerlink" href="aboutus.html">About us</a></p>
                     <p>Wineries</p>
                     <p>Shipping</p>
                 </div> <br>
@@ -226,7 +226,16 @@
                 </div> <br>
                 <div class="our_partners">
                     <p class="ftitle_style">Our Partners</p>
-                    <img class="partners" src="images/icons/homepage/partners_logo.svg">
+                    <div class="partners">
+                        <img class="partnerlogo" src="images/photos/footer/5f4e9fa3a3a86039291d36c6_kihoskh.png">
+                        <img class="partnerlogo" src="images/photos/footer/barpoldo.png">
+                        <img class="partnerlogo" src="images/photos/footer/Carpe%20Diem.png">
+                        <img class="partnerlogo" src="images/photos/footer/castelmimi.png">
+                        <img class="partnerlogo" src="images/photos/footer/fautor.png">
+                        <img class="partnerlogo" src="images/photos/footer/gitana-winery-logo-6940F08529-seeklogo.com.png">
+                        <img class="partnerlogo" src="images/photos/footer/notyourusualwinebar.png">
+                        <img class="partnerlogo" src="images/photos/footer/vinveto.png">
+                    </div>
                 </div>
 
 
