--- a/privateevents.html
+++ b/privateevents.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title></title>
     <link rel="stylesheet" href="css/events.css">
 </head>
@@ -54,14 +55,14 @@
                             <p>Learn from our world class Sommelier</p>
                         </li>
                         <li>
-                            <p> Have the opportunity for team-building activities</p>
+                            <p>Have the opportunity for team-building activities</p>
                         </li>
                     </ul>
                     <button>
                         <p>Book event</p>
                     </button>
                 </div>
-                <div class="privateeventimage1"></div>
+                <div><img class="privateeventimage1" src="images/photos/events/ouroffersquare.png"></div>
             </div>
         </section>
 
@@ -97,7 +98,7 @@
 
         <section class="event">
             <div class="wrapper2 wrapper2pictureleft">
-                <div class="privateeventimage2"></div>
+               <div><img class="privateeventimage2" src="images/photos/events/tasting.png"></div>
                 <div class="textbox">
                     <h3>The experience</h3>
                     <h5>More than just tasting</h5>
@@ -113,7 +114,7 @@
         </section>
 
         <section class="center contactus">
-            <h5>Book your tasting here</h5>
+            <h2>Book your tasting here</h2>
 
             <p>To book an event with us, send us a message telling the number of people that will be attending the event or any specific requests and we'll make the experience happen!</p>
 
@@ -155,7 +156,7 @@
                 <div class="footer_2">
                     <div class="f2_information">
                         <p class="ftitle_style">Information</p>
-                        <p>About us</p>
+                         <p><a class="footerlink" href="aboutus.html">About us</a></p>
                         <p>Wineries</p>
                         <p>Shipping</p>
                     </div> <br>
@@ -167,17 +168,28 @@
                     </div>
                 </div>
 
-                <div class="footer_3">
-                    <div class="stay_connected">
-                        <p class="ftitle_style">Stay connected</p>
-                        <p>Subscribe to our newsletter. Don’t worry we won’t spam you. You’ll only get the most important information and special offers!</p>
-                        <button>SUBSCRIBE</button>
-                    </div> <br>
-                    <div class="our_partners">
-                        <p class="ftitle_style">Our Partners</p>
-                        <img class="partners" src="images/icons/homepage/partners_logo.svg">
+                          <div class="footer_3">
+                <div class="stay_connected">
+                    <p class="ftitle_style">Stay connected</p>
+                    <p>Subscribe to our newsletter. Don’t worry we won’t spam you. You’ll only get the most important information and special offers!</p>
+                    <button>SUBSCRIBE</button>
+                </div> <br>
+                <div class="our_partners">
+                    <p class="ftitle_style">Our Partners</p>
+                    <div class="partners">
+                        <img class="partnerlogo" src="images/photos/footer/5f4e9fa3a3a86039291d36c6_kihoskh.png">
+                        <img class="partnerlogo" src="images/photos/footer/barpoldo.png">
+                        <img class="partnerlogo" src="images/photos/footer/Carpe%20Diem.png">
+                        <img class="partnerlogo" src="images/photos/footer/castelmimi.png">
+                        <img class="partnerlogo" src="images/photos/footer/fautor.png">
+                        <img class="partnerlogo" src="images/photos/footer/gitana-winery-logo-6940F08529-seeklogo.com.png">
+                        <img class="partnerlogo" src="images/photos/footer/notyourusualwinebar.png">
+                        <img class="partnerlogo" src="images/photos/footer/vinveto.png">
                     </div>
                 </div>
+
+
+            </div>
             </div>
 
             <p class="copyright">Copyright © Moldovin</p>
